Cleaning the css code in index.html

--- a/7seg Display in JS/index.html
+++ b/7seg Display in JS/index.html
@@ -3,26 +3,26 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>7-seg Display</title>
+    <title>7-Segment Display</title>
 	<style type="text/css">
 		body {
-			color: #ffffff;
-			background-color: #2b3137 ;
-			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;:w-resize
+			 color: #ffffff;
+			 background-color: #2b3137 ;
+			 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;:w-resize
 		}
 		h1 {
-            color: #fafbfc; 
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 34px;
-            font-weight: bold;
-            text-align: center;
-        }
+           		 color: #fafbfc; 
+            		 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            		 font-size: 34px;
+           		 font-weight: bold;
+           		 text-align: center;
+      		  }
 		label {
-		    color: #2dba4e;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 18px; 
-            font-weight: normal;
-            text-align: left;
+		        color: #2dba4e;
+          		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            		font-size: 18px; 
+            		font-weight: normal;
+            		text-align: left;
         }
 		select {
 			background-color: #6a737d;
@@ -55,20 +55,20 @@
 			opacity: 1;
 		}
 		input[type="range"]::-webkit-slider-thumb {
-		  -webkit-appearance: none;
-		  appearance: none;
-		  width: 20px;
-		  height: 20px;
-		  background: #2899d5;
-		  cursor: pointer;
-		  border-radius: 30px;
+		  	-webkit-appearance: none;
+		  	appearance: none;
+		  	width: 20px;
+		  	height: 20px;
+		  	background: #2899d5;
+		  	cursor: pointer;
+		  	border-radius: 30px;
 		}
 		
 		input[type="range"]::-moz-range-thumb {
-		  width: 20px;
-		  height: 20px;
-		  background: #ffAF50;
-		  cursor: crosshair;
+		  	width: 20px;
+		  	height: 20px;
+		  	background: #ffAF50;
+		  	cursor: crosshair;
 		}
 		input[type="number"] {
 			border: 1px solid #3498db;
@@ -83,9 +83,6 @@
 			transform: scale(1.8);
 			transition: transform 0.2s ease-in-out;
 			accent-color: #3dcf29;
-		}
-		.checkOff{
-			accent-color: #34495e;
 		}
 		#inputSpace {
 			padding: 8px;
@@ -109,7 +106,7 @@
 			background-color: #8cb03e;
 			color: #34495e;
 			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
+            		font-weight: bold;
 			box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 		}
 		#inputSpace:hover {
@@ -118,12 +115,6 @@
 			color: #3d535b;
 			border-color: #69874b	;
 		}
-		
-
-/* Stilizare pentru input de tip text când este în modul hover */
-input[type="text"]:hover {
-  border-color: #999; /* Schimbă culoarea marginii la gri când este în modul hover */
-}
 }
   </style>
 </head>
